fix: schema of array lists
